# langbot

./: .containerignore  .gitignore  Containerfile  LICENSE  Makefile  README.md
.github/workflows/: build-image.yml
base-image/: Containerfile  Makefile
bot/: Cargo.toml
bot/src/: main.rs  podmanager.rs
langs/amethyst/: compile.sh  hello-world.txt  run.sh
langs/ante/: compile.sh  hello-world.txt  run.sh
langs/asm/: hello-world.x86_64.txt  run.sh
langs/barrel/: compile.sh  run.sh
langs/c/: hello-world.txt  run.sh
langs/c++/: compile.sh  hello-world.txt  run.sh
langs/carbon/: compile.sh  run.sh
langs/chili/: compile.sh  hello-world.txt  run.sh
langs/cognate/: compile.sh  hello-world.txt  run.sh
langs/cthulhu/: compile.sh  hello-world.txt  run.sh
langs/egel/: compile.sh  hello-world.txt  run.sh
langs/fortran/: hello-world.txt  run.sh
langs/gilia/: compile.sh  run.sh
langs/gwion/: compile.sh  hello-world.txt  run.sh
langs/haskell/: run.sh
langs/hook/: compile.sh  run.sh
langs/javascript/: run.sh
langs/lean/: compile.sh  hello-world.txt  run.sh
langs/lua/: compile.sh  run.sh
langs/mlatu/: compile.sh  run.sh
langs/mypy/: hello-world.txt  run.sh
langs/nasm/: hello-world.x86_64.txt  run.sh
langs/ocaml/: run.sh
langs/osyris/: compile.sh  run.sh
langs/perl/: run.sh
langs/phosphor/: compile.sh  hello-world.x86_64.txt  run.sh
langs/prolog/: hello-world.txt  run.sh
langs/prowl/: compile.sh  run.sh
langs/python/: run.sh
langs/racket/: run.sh
scripts/: compile-all.sh  compile.sh  get-files.sh  run-tests.sh  run.sh
(+9 files in other folders)
