[package]
name = "langbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
lazy_static = "1.4"
lru = "0.7"
tar = "0.4"

[dependencies.serenity]
version = "0.11"
default_features = false
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies.tokio]
version = "1.18"
features = ["macros", "rt-multi-thread"]
